# Desolate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Constants.hpp  Entity.hpp  EntityFactory.hpp  Scene.hpp  SceneFactory.hpp  SceneStack.hpp  SettingsState.hpp  context.hpp  input.hpp  map.hpp  npc.hpp  npcMaster.hpp  squad.hpp  tracedPath.hpp  utils.hpp
include/Animations/: Animation.hpp  attackAnimation.hpp  voicelineAnimation.hpp
include/Components/: AreaScanComponent.hpp  AttackComponent.hpp  AudioComponent.hpp  AudioSystemComponent.hpp  ButtonComponent.hpp  ChaseAttackComponent.hpp  CircleRenderComponent.hpp  Component.hpp  DeadComponent.hpp  DeathSystemComponent.hpp  DecayTimerComponent.hpp  FactionComponent.hpp  FogofWarComponent.hpp  GlobalScanComponent.hpp  HPColorShadingComponent.hpp  HealComponent.hpp  HealthComponent.hpp  HealthIndicatorComponent.hpp  HearComponent.hpp  HunterLairComponent.hpp  KnobComponent.hpp  MapDrawingComponent.hpp  MouseHitboxComponent.hpp  MovementComponent.hpp  NumberComponent.hpp  PathFollowerComponent.hpp  ProtectComponent.hpp  ProtectionSystemComponent.hpp  QuestHudComponent.hpp  QuestSystemComponent.hpp  RadioEventHandler.hpp  RadiusIndicatorComponent.hpp  RectRenderComponent.hpp  RenderComponent.hpp  ResourceComponent.hpp  ResourceManager.hpp  ResourceManagerComponent.hpp  RespawnComponent.hpp  RespawnSystemComponent.hpp  RingIndicatorComponent.hpp  (+14 more)
include/Locations/: location.hpp  outpost.hpp
include/NPCs/: squad.hpp  wanderer.hpp
include/QuestSystem/: QuestNode.hpp  Questline.hpp
include/QuestSystem/Nodes/: KillCountQuest.hpp  ResourceThresholdQuest.hpp
include/RadioEvents/: AirdropRadioEvent.hpp
include/Strategies/: AreaPatrolStrategy.hpp  ChaseStrategy.hpp  HuntStrategy.hpp  MoveToEntityStrategy.hpp  PathFollowerStrategy.hpp  StillStrategy.hpp  Strategy.hpp
include/StrategyDrivers/: HunterStrategyDriver.hpp  LurkerStrategyDriver.hpp  StrategyDriver.hpp  TerritorialStrategyDriver.hpp  WandererStrategyDriver.hpp  WandererStrategyDrvier.hpp
src/: Entity.cpp  Scene.cpp  SceneStack.cpp  SettingsState.cpp  context.cpp  input.cpp  main.cpp  map.cpp  npc.cpp  npcMaster.cpp  squad.cpp  tracedPath.cpp  utils.cpp
src/Animations/: attackAnimation.cpp  voicelineAnimation.cpp
src/Components/: AreaScanComponent.cpp  AttackComponent.cpp  AudioComponent.cpp  AudioSystemComponent.cpp  ButtonComponent.cpp  ChaseAttackComponent.cpp  CircleRenderComponent.cpp  DeathSystemComponent.cpp  DecayTimerComponent.cpp  FogofWarComponent.cpp  GlobalScanComponent.cpp  HPColorShadingComponent.cpp  HealComponent.cpp  HealthComponent.cpp  HealthIndicatorComponent.cpp  HearComponent.cpp  KnobComponent.cpp  MapDrawingComponent.cpp  MouseHitboxComponent.cpp  NumberComponent.cpp  PathFollowerComponent.cpp  ProtectionSystemComponent.cpp  QuestHudComponent.cpp  QuestSystemComponent.cpp  RadioEventHandler.cpp  RadiusIndicatorComponent.cpp  RectRenderComponent.cpp  RenderComponent.cpp  ResourceComponent.cpp  ResourceManager.cpp  ResourceManagerComponent.cpp  RespawnComponent.cpp  RespawnSystemComponent.cpp  RingIndicatorComponent.cpp  SegmentedRingIndicatorComponent.cpp  ShockwaveComponent.cpp  ShockwaveRechargeComponent.cpp  ShootComponent.cpp  SliderComponent.cpp  StillAttackComponent.cpp  (+6 more)
src/Locations/: location.cpp  outpost.cpp
src/NPCs/: squad.cpp  wanderer.cpp
src/QuestSystem/: Questline.cpp
src/QuestSystem/Nodes/: KillCountQuest.cpp  ResourceThresholdQuest.cpp
src/RadioEvents/: AirdropRadioEvent.cpp
src/Strategies/: AreaPatrolStrategy.cpp  ChaseStrategy.cpp  HuntStrategy.cpp  MoveToEntityStrategy.cpp  PathFollowerStrategy.cpp
src/StrategyDrivers/: HunterStrategyDriver.cpp  LurkerStrategyDriver.cpp  StrategyDriver.cpp  TerritorialStrategyDriver.cpp  WandererStrategyDriver.cpp
